<resources>
    <string name="app_name">Lab1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_home">home</string>
    <string name="pass">Password</string>
    <string name="Fname">Firstname</string>
    <string name="Lname">Lastname</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone Number</string>
</resources>
