<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.frank.lab1.home"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editText7"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Fname"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Lname"
        android:layout_alignBaseline="@+id/editText7"
        android:layout_alignBottom="@+id/editText7"
        android:layout_toEndOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/editText10"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/Phone"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/editText7"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/editText9"
        android:layout_alignParentStart="true" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/editText11"
    android:layout_alignParentStart="true"
    android:weightSum="1"
    android:layout_alignLeft="@id/button1">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/editText8"
        android:layout_below="@+id/editText11"
        android:layout_marginTop="28dp"
        android:hint="CREATE ACCOUNT"
        android:textColor="@color/material_brown_700" />

    <Button
        android:id="@+id/button3"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="25dp"
        android:layout_weight="0.66"
        android:text="LOGIN"
        android:textColor="@color/material_brown_700" />
</LinearLayout>

</RelativeLayout>
